--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@
 html {
 
 	background-color: white;
-	font-family: 'Proxima Nova', sans-serif;
+	font-family: 'Lato', sans-serif;
 	line-height: 1.5;
 	color: #666666;
 	-webkit-font-smoothing: antialiased;
@@ -967,4 +967,12 @@ td {
 .landing-menu {
     margin-top:100px;
     height: 400px;
+}
+
+.allpage-title {
+    font-family: 'Lato' sans-serif;
+    font-size: 23px;
+    font-weight: 600;
+    margin-bottom: 23px;
+    color: #000000;
 }
